--- a/Class/Graygram/Podfile
+++ b/Class/Graygram/Podfile
@@ -9,6 +9,7 @@ target 'Graygram' do
 	pod 'Alamofire', '~> 4.4'
   pod 'ObjectMapper'
   pod 'ManualLayout'
+  pod 'SnapKit'
   pod 'Kingfisher'
   
 end
